--- a/SmartOp-Angular/src/app/app.component.html
+++ b/SmartOp-Angular/src/app/app.component.html
@@ -10,7 +10,8 @@
         placeholder="Trouver un chirurgien..."
         (keyup)="updateFilter($event)"
     />
-    <span style="margin-left: -30px; color:#488bde"><fa-icon [icon]="faSearch"></fa-icon></span>
+    <span *ngIf="!isSearch" style="margin-left: -51px; color:#488bde"><button><fa-icon [icon]="faSearch"></fa-icon></button></span>
+    <span *ngIf="isSearch" style="margin-left: -51px;"><button (click)="Initialize()"><fa-icon style=" color: crimson" [icon]="faTimesCircle"></fa-icon></button></span>
     <span><button (click)="Initialize()"><fa-icon [icon]="faRefresh"></fa-icon></button></span>
   </div>
   
