--- a/SmartOp-Angular/src/styles.scss
+++ b/SmartOp-Angular/src/styles.scss
@@ -12,6 +12,6 @@
 }
 
 body{
-    background-color: #edf2f7;
+    background-image:  linear-gradient(to right, #fcfcfc , #fcfcfc, #f3f7fc   , #E2E2E2);
     font-family: "Avenir" ;
 }
