--- a/SmartOp-Angular/src/styles.scss
+++ b/SmartOp-Angular/src/styles.scss
@@ -12,6 +12,7 @@
 }
 
 body{
-    background-image:  linear-gradient(to right, #fcfcfc , #fcfcfc, #f3f7fc   , #E2E2E2);
+    // background-image:  linear-gradient(to right, #fcfcfc , #fcfcfc, #f3f7fc   , #E2E2E2);
+    background-color: #f3f4f5;
     font-family: "Avenir" ;
 }
