Commit final :8ball:

--- a/SmartOp-Angular/src/app/app.component.html
+++ b/SmartOp-Angular/src/app/app.component.html
@@ -1,7 +1,8 @@
 
 <div class="header">
   <h4 class="Title">
-    <img src="../assets/logo.png" width="120" alt=""> Datatable Test
+    <img src="../assets/logo.png" width="120" height="50" alt="">
+    <p> Datatable Test</p>
   </h4>  
 </div>
 
