--- a/SmartOp-Angular/src/app/app.component.scss
+++ b/SmartOp-Angular/src/app/app.component.scss
@@ -1,6 +1,7 @@
 
 .header{
     padding-left: 3%;
+    padding-top: 10px;
     margin-bottom: 20px;
 
     width: 100%;
@@ -8,12 +9,13 @@
     background-color: #fcfcfc;
 
     .Title{
-        padding-top: 20px;
-        padding-bottom: 10px;
-
-        border-bottom: 1px solid rgb(235, 235, 235);
+        display: flex;
     }
 
+    .Title p{
+        margin-top:  12px;
+        margin-left: -2px;
+    }
 }
 
 .Mycontainer{
@@ -35,9 +37,9 @@
 
     .TableHeader p{
         margin-top: 15px;
-        font-weight: 500;
-        font-size: 18px;
-        font-style: normal;
+        font-weight: 400;
+        font-size: 16px;
+        letter-spacing: 1px;
     }
 
     .Search{
@@ -69,7 +71,7 @@
         height: 33px;
         width: 33px;
 
-        margin-left: 18px;
+        margin-left: 30px;
 
         border-radius:50%;
         box-shadow: 1px 1px 8px rgba(194, 194, 194, 0.998);
